Working compilation of new structure
Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>